--- a/SlipNSlide/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/SlipNSlide/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/dexte/Desktop/School/IGME450/450_TopDown/SlipNSlide/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/dexte/Desktop/School/IGME450/450_TopDown/SlipNSlide/WebGL Builds/Build;C:/Users/dexte/Desktop/School/IGME450/450_TopDown/SlipNSlide/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
